--- a/src/components/Professor/Professor.css
+++ b/src/components/Professor/Professor.css
@@ -1,6 +1,6 @@
 .professor-div{
     font-size:25px;
-    background-color: lightgrey;
+    background-color: lightblue;
     padding: 10px;
     border-radius: 5px;
     box-shadow:  0px 7px 29px 0px rgba(52, 52, 54, 0.5);
